welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:19: error: not found: value isFacingtrail
if (isFacingtrail()) {avance()}
    ^