welcome.lessons.welcome.methods.slug.SlugHunting.scala.code
def isFacingTrail():Boolean = {
var test = false;
if (estFaceMur) {}

else {avance(); if (getCouleurSol() == Color.green) { test = true}
recule()}
return test 
}        


def hunt() {
    while (!estSurBiscuit) {
baisseBrosse();leveBrosse();	
if (isFacingTrail()) {avance()} 
else { gauche(); 
if (isFacingTrail()) { avance()} 
else { gauche();gauche();
if (isFacingtrail()) {avance()}
    }}}
prendBiscuit()
   
}

